# nanodo

./: LICENSE  README.md  pyproject.toml
.github/workflows/: linux.yml  macos.yml  pytype.yml
leakr/: leakr_optout.ftrcp
nanodo/: __init__.py  data.py  evaluate.py  fsdp.py  loss.py  main.py  metrics.py  model.py  model_factory.py  optimizer.py  train.py
nanodo/configs/: default.py
tests/: data_test.py  evaluate_test.py  metrics_test.py  model_factory_test.py  model_test.py  optimizer_test.py  train_test.py
tests/testdata/: sentencepiece_cc_all.32000.100extra-sentencepiece.model
